--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,51 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin-right: 16px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #000000;
+  /*min-height: 100vh;*/
+  height: 100px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.App-header ul li{
+  display: inline-block;
+  margin-right: 25px;
+  font-weight: bold;
+  font-size: 35px;
+  padding: 0, 20px;
+}
+
+.App-header ul li a{
+  color: #fdd835;
+  text-decoration: none;
+}
+
+.App-header ul li a:hover{
+  color: #c6a700;
+}
+.App-link {
+  color: #61dafb;
 }
